--- a/style1.css
+++ b/style1.css
@@ -80,7 +80,7 @@ nav {
 
 .main-card1 {
   border: 4px groove #b8e5bc;
-  padding: 15px;
+  padding: 10px;
   background-color: transparent;
   display: flex;
   flex-direction: column;
